--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,15 @@ flutter:
     - assets/avatar.jpg
     - assets/avatar1.jpg
     - assets/avatar2.jpg
+    - assets/ngucoc.jpg
+    - assets/thit.jpg
+    - assets/Fruits/buoi.jpg
+    - assets/Fruits/chuoi.jpg
+    - assets/Fruits/dudu.jpg
+    - assets/Fruits/tao.jpg
+    - assets/Fruits/thanhlong.jpg
+    - assets/Fruits/xoai.jpg
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
