--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^4.3.2+2
   splashscreen: 1.2.0
   flutter_signin_button: ^1.0.0
+  scoped_model: ^1.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
