--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,6 +83,8 @@ flutter:
     - assets/images/
     - assets/flutter-icon.png
     - assets/dart.png
+    - assets/flower/tulip.jpg
+    - assets/meatAndEgg/pork.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
