--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   flutter_svg: ^0.19.0
-  flutter_rating: ^0.0.2
+  flutter_rating_bar: ^3.0.1+1
 
 dev_dependencies:
   flutter_test:
