--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_svg: ^0.19.0
   flutter_rating_bar: ^3.0.1+1
+  rounded_loading_button: ^1.0.0
 
 dev_dependencies:
   flutter_test:
