--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
     - assets/dart.png
     - assets/flower/tulip.jpg
     - assets/meatAndEgg/pork.jpg
+    - assets/image/giavi/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
