--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   flutter_svg: ^0.19.0
   flutter_rating_bar: ^3.0.1+1
   rounded_loading_button: ^1.0.0
+  firebase_storage: ^3.0.8
+
+
+
 
 dev_dependencies:
   flutter_test:
@@ -95,14 +99,15 @@ flutter:
     - assets/image/thit/
     - assets/image/thucpham/
     - assets/image/trungsua/
-    - assets/category/giavi.jpg
-    - assets/category/giocha.jpg
-    - assets/category/haisan.jpg
-    - assets/category/hoaqua.jpg
-    - assets/category/ngucoc.jpg
-    - assets/category/raucu.jpg
-    - assets/category/thit.jpg
-    - assets/category/trungsua.jpg
+    - assets/nhan/giavi.jpg
+    - assets/nhan/giocha.jpg
+    - assets/nhan/haisan.jpg
+    - assets/nhan/hoaqua.jpg
+    - assets/nhan/ngucoc.jpg
+    - assets/nhan/raucu.jpg
+    - assets/nhan/thit.jpg
+    - assets/nhan/trungsua.jpg
+    - assets/firstImage.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
