--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_rating_bar: ^3.0.1+1
   rounded_loading_button: ^1.0.0
   firebase_storage: ^3.0.8
+  image_picker: ^0.6.7+14
 
 
 
@@ -108,6 +109,7 @@ flutter:
     - assets/nhan/thit.jpg
     - assets/nhan/trungsua.jpg
     - assets/firstImage.jpg
+    - assets/ramdom.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
